--- a/VRChat/27/1258727.html
+++ b/VRChat/27/1258727.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "Mpogl0tCCUlzi9gJrGh1dWaWDzg3OBio9yWceXBGDKQ="></script>
+    "z7gsU/IdYhW+htOpGSJ06j4P87OskG+/Qy6H7NU7NdU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】蒼炎ノ薙杖【変形武器】","description":"※このモデルは「赤間リユ」に含まれている武器モデルと同じものです。\n\nVCI、FBX、Unityパッケージを同梱しています。\nVRChat、Virtualcastでの使用を想定しています。\n\n\n■内容物\n●tue\n・akama_tue.fbx\n   tue_tex.png\n   uv_crystal.png\n   uv_tue_blade.png\n   uv_tue_blade.tga\n　杖のFBXデータ及び、テクスチャです。ポリゴン数1180\n\n・akama_tue.vci\n　杖のVCIデータです。\n---------------------\n・akama_tue.unitypackage\n　VCI用のUnityパッケージです(Unity 2018.3.5)\n--------------------\n・readme.txt\n　利用規約等について書かれたテキスト\n\n\n■商用利用について\n・この3Dモデルは商用、非商用に関わらず使用することができます。（R-18・R-18G制限なし）\nゲーム制作、動画配信、アニメーション制作等の利用が可能です。\nただし、3Dデータを含む形でのデータを販売することは禁じます。\n\n\n■モデル改変について\n・モデルの改変、テクスチャ等の改変は自由に行うことができます。\n\n\n\n■著作権\n・データの改造は個人利用の範囲での流用は可能です。\n・当配布3Dデータ及び改変データの著作権は製作者であるらいこうに帰属するものとします。\n\n\n\n■禁止事項\n・モデルデータ、テクスチャデータの再配布、販売を禁止します。\n\n・改変モデルに関しても同様に再配布、販売を禁止します。\nただし、第三者がモデルデータを流用できない形でデータを含む場合は使用可能です。\n（制作したゲーム中に改変をしたモデルを使用する等）\nこの場合、配布する際に当モデルを使用している旨を記載してください。\n\n・公序良俗に反する行為、他社に対する誹謗中傷目的での使用を禁止します。\n\n\n■トラブル等について\n・本モデルを使用したことによって生じたいかなる不利益に対して、製作者らいこうは一切の責任を負わないものとします。\n\n\n\n--------------------------------------\nこの利用規約は予告なく変更、改定されることがあります。\n\n\n\n製作者：　　らいこう/raikohGT\nサークル：　歯車平原\nサイトURL:　http://hagurumaheigen.blog.fc2.com/\nTwitter:    @kurohune\nPixiv:      https://www.pixiv.net/member.php?id=556116\n\n","url":"https://booth.pm/ja/items/1258727","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/0def6edc-839b-4238-ac6f-f10503707425/i/1258727/a23281bb-25ab-401d-b431-9eb7f26f58b6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Mpogl0tCCUlzi9gJrGh1dWaWDzg3OBio9yWceXBGDKQ="></script>
+    nonce="z7gsU/IdYhW+htOpGSJ06j4P87OskG+/Qy6H7NU7NdU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -594,7 +594,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
